# baremetal-os

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/i2c-slave/: CMakeLists.txt  main.c
applications/led-control/: CMakeLists.txt  main.c
boards/stm32f407vet6/: CMakeLists.txt  board.c  startup.c  stm32f407vet6.h  stm32f407vet6.lds  vector_handlers.c  vectors.c
cmake/: arm-none-eabi.cmake  baremetal.cmake
drivers/: CMakeLists.txt
drivers/gpio/: CMakeLists.txt  gpio.c  gpio.h
drivers/i2c/: CMakeLists.txt  i2c.c  i2c.h
drivers/uart/: CMakeLists.txt  uart.c  uart.h
os/: CMakeLists.txt
os/console/: CMakeLists.txt  console.c  console.h
os/kernel/: CMakeLists.txt  kernel.c  kernel.h
